--- a/recipes/ravens-berry-feast/index.html
+++ b/recipes/ravens-berry-feast/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Raven’s Berry Feast</h1>
-    <img src="./assets/images/ravens-berry-feast.jpg" alt="Raven's Berry Feast" />
+    <img src="./assets/images/ravens-berry-feast.png" alt="Raven's Berry Feast" />
     
     <h2>Description</h2>
     <p>This vibrant mix of seasonal berries—blueberries, blackberries, and raspberries—is tossed with a sprinkle of wildflower seeds and a drizzle of agave nectar. It celebrates Odin’s ravens, who gather information and share wisdom.</p>
