Update several index.html files

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <p>These recipes are inspired by Odin's ravens, Huginn and Muninn, who gather wisdom and share knowledge. Here are some of Odin's favorite recipes for his beloved birds.</p>
     
     <ul>
-        <li><a href="recipes/ravens-berry-feast/index.html">Raven’s Berry Feast</a></li>
-        <li><a href="recipes/valhalla-seed-cake/index.html">Valhalla Seed Cake</a></li>
-        <li><a href="recipes/mimirs-nutty-snack/index.html">Mimir's Nutty Snack</a></li>
+        <li><a href="recipes/ravens-berry-feast/">Raven’s Berry Feast</a></li>
+        <li><a href="recipes/valhalla-seed-cake/">Valhalla Seed Cake</a></li>
+        <li><a href="recipes/mimirs-nutty-snack/">Mimir's Nutty Snack</a></li>
     </ul>
 </body>
 </html>
