--- a/recipes/mimirs-nutty-snack/index.html
+++ b/recipes/mimirs-nutty-snack/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Mimir's Nutty Snack</h1>
-    <img src="/assets/images/mimirs-nutty-snack.jpg" alt="Mimir's Nutty Snack" />
+    <img src="/assets/images/mimirs-nutty-snack.png" alt="Mimir's Nutty Snack" />
     
     <h2>Description</h2>
     <p>This nutty snack combines various nuts—walnuts, almonds, and pecans—with dried fruits and a sprinkle of rosemary and thyme. It provides a nutritious boost for birds and reflects the wisdom associated with Mimir in Norse mythology.</p>
