Update several index.html files

--- a/recipes/mimirs-nutty-snack/index.html
+++ b/recipes/mimirs-nutty-snack/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Mimir's Nutty Snack</h1>
     <div class="recipe-container">
-        <img src="/assets/images/mimirs-nutty-snack.jpg" alt="Mimir's Nutty Snack" />
+        <img src="/assets/images/mimirs-nutty-snack.png" alt="Mimir's Nutty Snack" />
         <div>
             <h2>Description</h2>
             <p>This nutty snack combines various nuts—walnuts, almonds, and pecans—with dried fruits and a sprinkle of rosemary and thyme. It provides a nutritious boost for birds and reflects the wisdom associated with Mimir in Norse mythology.</p>
