--- a/recipes/valhalla-seed-cake/index.html
+++ b/recipes/valhalla-seed-cake/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Valhalla Seed Cake</h1>
     <div class="recipe-container">
-        <img src="/assets/images/valhalla-seed-cake.jpg" alt="Valhalla Seed Cake" />
+        <img src="/assets/images/valhalla-seed-cake.png" alt="Valhalla Seed Cake" />
         <div>
             <h2>Description</h2>
             <p>This delicious seed cake is made with a blend of sunflower, pumpkin, and flaxseeds, mixed with crushed oats, maple syrup, and coconut oil. It provides a high-energy treat for birds, celebrating the nurturing aspect of Valhalla.</p>
